--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -3,16 +3,22 @@
   <div class="card-body">
     <div class="row">
       <div class="col-md-2">Filter by:</div>
-      <div class="col-md-4"><input type="text" /></div>
+      <div class="col-md-4"><input type="text" [(ngModel)]="listFilter" /></div>
     </div>
     <div class="row">
-      <div class="col-md-6"><h4>Filtered by:</h4></div>
+      <div class="col-md-6">
+        <h4>Filtered by: {{ listFilter }}</h4>
+      </div>
     </div>
     <div class="table-responsive">
       <table class="table" *ngIf="products.length">
         <thead>
           <tr>
-            <th><button class="btn btn-primary">Show Image</button></th>
+            <th>
+              <button class="btn btn-primary" (click)="toggleImage()">
+                {{ showImage ? "Hide" : "Show" }} Image
+              </button>
+            </th>
             <th>Product</th>
             <th>Code</th>
             <th>Available</th>
@@ -22,7 +28,15 @@
         </thead>
         <tbody>
           <tr *ngFor="let product of products">
-            <td></td>
+            <td>
+              <img
+                *ngIf="showImage"
+                [src]="product.imageUrl"
+                [title]="product.productName"
+                [style.width.px]="imageMeasurements.width"
+                [style.margin.px]="imageMeasurements.margin"
+              />
+            </td>
             <td>{{ product.productName }}</td>
             <td>{{ product.productCode }}</td>
             <td>{{ product.releaseDate }}</td>
