--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -14,12 +14,12 @@
 
       <div class="text-center">Developed by:</div>
       <div class="text-center">
-        <h3>Deborah Kurata</h3>
+        <h3>George Middleton</h3>
       </div>
 
-      <div class="text-center">@deborahkurata</div>
+      <div class="text-center">@geomidd</div>
       <div class="text-center">
-        <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
+        <a href="https://github.com/Geomidd">GitHub</a>
       </div>
     </div>
   </div>
