--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -37,7 +37,11 @@
                 [style.margin.px]="imageMeasurements.margin"
               />
             </td>
-            <td>{{ product.productName }}</td>
+            <td>
+              <a [routerLink]="['/products', product.productId]">
+                {{ product.productName }}
+              </a>
+            </td>
             <td>
               {{ product.productCode | lowercase | convertToSpaces: "-" }}
             </td>
