--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -1,1 +1,15 @@
-<p>product-detail works!</p>
+<div class="card">
+  <div class="card-header">
+    {{ pageTitle }}
+    <div class="card-body" *ngIf="product"></div>
+    <div class="card-actions">
+      <button
+        (click)="onBack()"
+        class="btn btn-outline-secondary"
+        style="width: 80px"
+      >
+        <i class="fa fa-chevron-left"></i> Back
+      </button>
+    </div>
+  </div>
+</div>
